fixed cover flow on firefox

--- a/app/about/coverFlow.less
+++ b/app/about/coverFlow.less
@@ -11,6 +11,7 @@
   height:100%;
   position: relative;
   -webkit-perspective: 600px;
+  perspective: 600px;
 }
 
 .cover-flow--element {
